changed bootstrap theme

--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                 @Html.ActionLink("Praesidium", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav" style="float: right;">
                     <li>
                         <a href="@Url.Action("Index", "Home")">
                             <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
