--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -29,11 +29,11 @@ textarea {
     right: 10px; 
     height: 100px;
     width: 150px;
-    background-color: #ff0000;
+    background-color: #a3f14b;
     color: black;
     font-size: 25px;
     border: 0px;
-    border-radius: 25px;
+    border-radius: 5px;
 }
 
 #get-away:hover {
