--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
             // Get away right now
             window.open("http://weather.com", "_newtab");
             // Replace current site with another benign site
-            window.location.close();
+            window.close();
         }
     </script>
 </head>
