--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -29,7 +29,7 @@ textarea {
     right: 10px; 
     height: 100px;
     width: 150px;
-    background-color: #a3f14b;
+    background-color: #1272e8;
     color: black;
     font-size: 25px;
     border: 0px;
@@ -37,5 +37,5 @@ textarea {
 }
 
 #get-away:hover {
-    background-color: #00ff21;
+    background-color: #488bf6;
 }
