--- a/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
@@ -1,63 +1,7 @@
 ﻿
 @{
-    ViewBag.Title = "Cyber Security";
+    ViewBag.Title = "Index";
 }
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    </ol>
+<h2>Index</h2>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-        <div class="item active">
-            <img src="~/Content/Images/test1.jpg" />
-            <div class="carousel-caption">
-                <h3>Caption Text</h3>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/Content/Images/test2.jpg" />
-            <div class="carousel-caption">
-                <h3>Caption Text</h3>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/Content/Images/test3.jpg" />
-            <div class="carousel-caption">
-                <h3>Caption Text</h3>
-            </div>
-        </div>
-    </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-    </a>
-</div> <!-- Carousel -->
-
-<div class="row">
-    <div class="col-md-8">
-        Stories go here
-    </div>
-    <div class="col-md-4">
-        <p class="h3">Top 10 Ways to Protect Yourself Online</p>
-        <ul>
-            <li>Never tell anyone your name</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-        </ul>
-    </div>
-</div>
