--- a/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Cyber Security";
+    ViewBag.Title = "Cyber Security Page";
 }
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
