Updated the Contact Page.

--- a/Praesidium/Praesidium/Views/Home/Contact.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Contact.cshtml
@@ -1,17 +1,27 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<div style="text-align: center;">
+    <div style="display: inline-block; text-align: left">
+        <h2>@ViewBag.Title </h2>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+        <address>
+            1201 S State St<br />
+            Big Rapids, MI 49307<br />
+            <abbr title="Phone">P:</abbr>
+            555.555.5555
+        </address>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+        <address>
+            <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
+            <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+        </address>
+        <h2>Resources</h2>
+        <!--Possibly update section to pull links from content linked to ouside sites from database.-->
+        <p>
+            <a href="http://niceme.me/">example 1</a><br />
+            <a href="http://niceme.me/">example 2</a><br />
+            <a href="http://niceme.me/">example 3</a>
+        </p>
+    </div>
+</div>
