Change structure of top resources section

--- a/Praesidium/Praesidium/Views/Home/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Index.cshtml
@@ -44,10 +44,14 @@
 <div class="row">
     <div class="col-md-4">
         <h2 style="text-align: center;">Top Resources</h2>
-        <p>
-            test fortop resources - test fortop resources - test fortop resources - test fortop resources - test fortop resources - test fortop resources - 
-            test fortop resources - test fortop resources - test fortop resources - test fortop resources - test fortop resources - test fortop resources - 
-        </p>
+        <div style="border-top: 1px solid black; border-bottom: 1px solid black">
+            <h4>What is Human trafficking</h4>
+            <p>Views: 1027 &nbsp; Date Uploaded: 10/27/2016</p>
+            <p>Description</p>
+            <p>
+                This resource describes the key points to Human trafficking and provides information on key indicators.
+            </p>
+        </div>
     </div>
     <div class="col-md-4">
         <h2 style="text-align: center;">News</h2>
