--- a/Praesidium/Praesidium/Views/Home/About.cshtml
+++ b/Praesidium/Praesidium/Views/Home/About.cshtml
@@ -1,11 +1,44 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<p>Use this area to provide additional information.</p>
-
-<p>
-    Hello
-</p>
+    <h1 style="text-align: center;">About Bulldog Watch</h1>
+    <br />
+    <div>
+        <div class="col-md-8 panel panel-default" >
+            <br />
+            <div style="text-align: center;">
+                <img src="~/Content/Images/img04.jpg" style="border: 2px solid black;"/>
+            </div>
+            <br />
+            <div>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut bibendum eleifend blandit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla vel erat est. Donec ut placerat lorem. Cras dictum fermentum neque vel ultricies. Nulla et eleifend metus. Praesent vel venenatis orci, varius imperdiet est. Ut id pretium tellus. In nec venenatis sapien, non dapibus est. Morbi efficitur urna risus, convallis pellentesque nulla fermentum et. Fusce non rutrum elit. Quisque efficitur eleifend libero, vel aliquet urna vehicula nec. Integer non mi vulputate, feugiat turpis ac, dictum ex. Aenean dapibus erat metus, ac tempus tellus luctus porttitor.
+                <br />
+                <br />
+                Nulla sit amet faucibus lorem. Vestibulum accumsan libero odio, ut malesuada magna tincidunt eget. Mauris porttitor tortor non justo sollicitudin consectetur. Quisque mollis est nec pretium maximus. Donec varius aliquet turpis ac pellentesque. Aliquam dictum justo id sapien pulvinar, eu venenatis orci efficitur. Mauris nec risus diam.
+                <br />
+                <br />
+                Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec lacus vulputate consectetur et vel quam. Suspendisse viverra est velit, aliquet mattis nisl volutpat vitae. Morbi suscipit molestie ante eget blandit. Aenean commodo vitae est in imperdiet. Nunc at neque vestibulum, tristique diam id, suscipit sem. Morbi nec diam id dolor accumsan accumsan mattis sit amet orci. Donec purus turpis, pharetra mollis felis quis, laoreet rutrum est. Cras malesuada enim ex, quis posuere eros malesuada eget. Cras facilisis dolor non sem tincidunt tincidunt. Maecenas at nisl nec massa suscipit posuere non nec nibh. Donec ullamcorper fermentum est sed facilisis. Ut dignissim risus ut libero scelerisque mollis. Quisque tristique risus a bibendum convallis. Integer nec consequat tortor, eget tincidunt nisl.
+            </div>
+            <br />
+        </div>
+        <br />
+        <div style="text-align: center;" class="team-clean col-md-4 ">
+            <div class="container">
+                <div>
+                    <div>
+                        <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" style="width: 100%;" />
+                        <br /><br />
+                        <p style="text-align: center;">This page was created by Ferris State Students <br /> under the supervision of Professors. </p>
+                        <ul>
+                            <li>Social Services</li>
+                            <li>Computer Information Systems</li>
+                            <li>Hospitality Management</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="intro">
+            <h3 class="text-center">This page was created by Ferris State Students <br /> under the supervision of Professors. </h3>
+        </div>
+    </div>
