Updated example links to go to homepage on azure.

--- a/Praesidium/Praesidium/Views/Home/Contact.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Contact.cshtml
@@ -19,9 +19,9 @@
         <h2>Resources</h2>
         <!--Possibly update section to pull links from content linked to ouside sites from database.-->
         <p>
-            <a href="http://niceme.me/">example 1</a><br />
-            <a href="http://niceme.me/">example 2</a><br />
-            <a href="http://niceme.me/">example 3</a>
+            <a href="http://praesidium.azurewebsites.net/">example 1</a><br />
+            <a href="http://praesidium.azurewebsites.net/">example 2</a><br />
+            <a href="http://praesidium.azurewebsites.net/">example 3</a>
         </p>
     </div>
 </div>
