--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -112,6 +112,7 @@ footer {
     position: fixed;
     top: 110px;
     right: 7.5%;
+    min-width: 200px;
 }
 
 
@@ -133,4 +134,5 @@ footer {
     position: fixed;
     top: 110px;
     right: 8%;
+    width: 90%;
 }
