--- a/Praesidium/Praesidium/Views/Home/About.cshtml
+++ b/Praesidium/Praesidium/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-    <h1 style="text-align: center;">About Bulldog Watch</h1>
+    <h1 style="text-align: center;">About Praesidium</h1>
     <br />
     <div>
         <div class="col-md-8 panel panel-default" >
