small tweak on contact

--- a/Praesidium/Praesidium/Views/Home/Contact.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Contact.cshtml
@@ -7,7 +7,7 @@
         <!-- Moved header within left-most column -->
         <div class="container">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-lg-4">
                     <h2>@ViewBag.Title </h2>
                     <address>
                         1201 S State St<br />
@@ -23,7 +23,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-lg-4">
                     <address>
                         <h2>Resources</h2>
                         <!--Possibly update section to pull links from content linked to ouside sites from database.-->
@@ -39,9 +39,9 @@
 
         <!--Add Glyphicon for design-->
 
-        <div class="col-sm-4">
+        <div class="col-lg-4">
 
-            <span class="glyphicon-phone-alt" style="color:orangered"></span>
+            <span class="glyphicon-phone" style="color:orangered"></span>
 
         </div>
 
