--- a/Praesidium/Praesidium/Views/Home/Contact.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Contact.cshtml
@@ -18,11 +18,6 @@
                         <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
                     </address>
                 </div>
-            </div>
-        </div>
-
-        <div class="container">
-            <div class="row">
                 <div class="col-lg-4">
                     <address>
                         <h2>Resources</h2>
@@ -34,15 +29,13 @@
                         </p>
                     </address>
                 </div>
+
+                    <!--Add Glyphicon for design-->
+
+                    <div class="col-lg-4">
+
+                        <span class="glyphicon-earphone" style="color:orangered"></span>
             </div>
         </div>
-
-        <!--Add Glyphicon for design-->
-
-        <div class="col-lg-4">
-
-            <span class="glyphicon-phone" style="color:orangered"></span>
-
-        </div>
-
+    </div>
 
