final final tewak (hopefully)

--- a/Praesidium/Praesidium/Views/Home/Contact.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Contact.cshtml
@@ -13,7 +13,7 @@
                         1201 S State St<br />
                         Big Rapids, MI 49307<br />
                         <abbr title="Phone">P:</abbr>
-                        555.555.5555
+                        555.555.5555<br />
                         <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
                         <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
                     </address>
@@ -34,7 +34,7 @@
 
                     <div class="col-lg-4">
 
-                        <span class="glyphicon-earphone" style="color:orangered"></span>
+                        <span class="gylphicon glyphicon-earphone" style="color:orangered"></span>
             </div>
         </div>
     </div>
