Changed Social Services to Social Work

--- a/Praesidium/Praesidium/Views/Home/About.cshtml
+++ b/Praesidium/Praesidium/Views/Home/About.cshtml
@@ -30,7 +30,7 @@
                         <br /><br />
                         <p style="text-align: center;">This page was created by Ferris State Students <br /> under the supervision of Professors. </p>
                         <ul>
-                            <li>Social Services</li>
+                            <li>Social Work</li>
                             <li>Computer Information Systems</li>
                             <li>Hospitality Management</li>
                         </ul>
