--- a/Praesidium/Praesidium/Views/Home/Contact.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Contact.cshtml
@@ -33,7 +33,7 @@
                     <!--Add Glyphicon for design-->
 
                     <div class="col-lg-4">
-
+                        <span class="glyphicon glyphicon-earphone"></span>
                         <span class="gylphicon glyphicon-earphone" style="color:orangered"></span>
             </div>
         </div>
