--- a/Praesidium/Praesidium/Views/Home/Contact.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Contact.cshtml
@@ -33,8 +33,8 @@
                     <!--Add Glyphicon for design-->
 
                     <div class="col-lg-4">
-                        <span class="glyphicon glyphicon-earphone"></span>
-                        <span class="gylphicon glyphicon-earphone" style="color:orangered"></span>
+                        <span class="glyphicon glyphicon-earphone logo"></span>
+                       
             </div>
         </div>
     </div>
