Changed text align of bullet points

--- a/Praesidium/Praesidium/Views/Home/About.cshtml
+++ b/Praesidium/Praesidium/Views/Home/About.cshtml
@@ -29,7 +29,7 @@
                         <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" style="width: 100%;" />
                         <br /><br />
                         <p style="text-align: center;">This page was created by Ferris State Students <br /> under the supervision of Professors. </p>
-                        <ul>
+                        <ul class="Contributers">
                             <li>Social Work</li>
                             <li>Computer Information Systems</li>
                             <li>Hospitality Management</li>
