--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -46,7 +46,7 @@ textarea {
 footer {
     display: block;
     position: relative;
-    bottom: 0;
+    bottom: ;
     width: 100%;
     height: 180px; /* Height of the footer */
     padding-top: 10px;
@@ -139,3 +139,12 @@ footer {
 .Contributer {
     text-align: left;
 }
+
+.logo {
+   color: #f4511e;
+   font-size: 200px;
+   padding-left: 15%;
+       }
+     
+
+ 
