--- a/Praesidium/Praesidium/Views/Home/About.cshtml
+++ b/Praesidium/Praesidium/Views/Home/About.cshtml
@@ -1,13 +1,17 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-    <h1 style="text-align: center;">About Praesidium</h1>
+
+
+    <h1 style="text-align: center;">About the Ferris Watchdog Program</h1>
     <br />
-    <div>
-        <div class="col-md-8 panel panel-default" >
-            <br />
+
+    <div class="container">
+        <div class="col-md-9 panel panel-default" >
+            
             <div style="text-align: center;">
-                <img src="~/Content/Images/img04.jpg" style="border: 2px solid black;"/>
+            <!-- Made the ferris image responsive to scaling *Caleb*-->
+            <img src="~/Content/Images/img04.jpg" style="border: 2px solid black; "class="img-responsive"/>
             </div>
             <br />
             <div>
@@ -22,23 +26,20 @@
             <br />
         </div>
         <br />
-        <div style="text-align: center;" class="team-clean col-md-4 ">
+        <div style="text-align: center;" class="team-clean col-md-3 ">
             <div class="container">
-                <div>
-                    <div>
-                        <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" style="width: 100%;" />
-                        <br /><br />
-                        <p style="text-align: center;">This page was created by Ferris State Students <br /> under the supervision of Professors. </p>
-                        <ul class="Contributers">
-                            <li>Social Work</li>
-                            <li>Computer Information Systems</li>
-                            <li>Hospitality Management</li>
-                        </ul>
-                    </div>
+                  
+                        <!-- Added Scalability to this photo as well *Caleb*-->
+                        <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" style="width: 100%;"class="img-responsive" />
+                        <br /><br />                  
+                     <!-- Changed from list to paragraph with breaks for looks, styled a bit, and added some buttons to department sites *Caleb* -->               
+                                <p style="color:lightslategrey"><strong><em>Social Work Department</em></strong><br /><br /><a class="btn btn-info" href="http://www.ferris.edu/socialwork/">More Info <span class="glyphicon glyphicon-thumbs-up"></span></a><br /><br /><br />
+                                <strong><em>Computer Information Systems Department</em></strong><br /><br /><a class="btn btn-warning" href="http://www.ferris.edu/bachelor-degree-computer-information-systems-cis-degree.htm">More Info <span class="glyphicon glyphicon-thumbs-up"></span></a><br /><br /><br />
+                                <strong><em>Hospitality Management Department</em></strong><br /><br /><a class="btn btn-danger" href="http://www.ferris.edu/business/program/hospitality/">More Info <span class="glyphicon glyphicon-thumbs-up"></span></a><br /><br /><br />
+                                <strong><em>Accountancy/Computer Information Systems Department</em></strong><br /><br /><a class="btn btn-success" href="http://ferris.edu/business/program/accountancy/">More Info <span class="glyphicon glyphicon-thumbs-up"></span></a></p>
                 </div>
             </div>
         </div>
         <div class="intro">
-            <h3 class="text-center">This page was created by Ferris State Students <br /> under the supervision of Professors. </h3>
+            <p class="text-center" style="color:lightslategrey"><strong><em>This page was created by Ferris State Students <br /> under the supervision of Professors</em></strong> </p>
         </div>
-    </div>
