width adjustment to main photo

--- a/Praesidium/Praesidium/Views/Home/About.cshtml
+++ b/Praesidium/Praesidium/Views/Home/About.cshtml
@@ -11,7 +11,7 @@
             
             <div style="text-align: center;">
             <!-- Made the ferris image responsive to scaling *Caleb*-->
-            <img src="~/Content/Images/img04.jpg" style="border: 2px solid black; "class="img-responsive"/>
+            <img src="~/Content/Images/img04.jpg" style="border: 2px solid black; width:100%;" class="img-responsive"/>
             </div>
             <br />
             <div>
