Adjusted the cyber security page to add some style and a few more elements, adj. the site.css file accordingly.

--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -140,11 +140,18 @@ footer {
     text-align: left;
 }
 
+/*Glyphicon styling*/
 .logo {
    color: #f4511e;
    font-size: 200px;
    padding-left: 15%;
        }
-     
+  
+/*glyphicon table styling*/ 
+
+  .logo-table {
+      color: #f4511e;
+      font-size: 50px;
+  }
 
  
