--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -48,7 +48,7 @@ footer {
     position: relative;
     bottom: ;
     width: 100%;
-    height: 180px; /* Height of the footer */
+    min-height: 180px; /* Height of the footer */
     padding-top: 10px;
     background-color: #282d32;
 }
