--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                 <button id="get-away" style="font-family: 'Agency FB'; color: white" onclick="javascript: getAway();" class="btn btn-info btn-lg"><span class="glyphicon glyphicon-warning-sign"></span><br /> Emergency Exit </button>
                 
                 <div class="row">
-                    <div class="col-md-1"></div>
+                    <div class="col-md-1 col-sm-1 col-lg-1"></div>
                     <div class="col-md-5 item" style="color: white; text-align: center;">
                         <h3>Company Name</h3>
                         <p>Praesent sed lobortis mi. Suspendisse vel placerat ligula. Vivamus ac sem lacus. Ut <br /> vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar <br /> dictum vel in justo.</p>
