--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -48,13 +48,13 @@
                             <span class="glyphicon glyphicon-search" aria-hidden="true"></span> 
                             Search
                         </a>
-                        <div class="searchArea hidden-sm hidden-xs hidden-print panel-collapse collapse" style="z-index: 1030;" id="searchArea">
+                        <div class="searchArea hidden-sm hidden-xs hidden-print accordion-body collapse" style="z-index: 1030;" id="searchArea">
                             <input id="txtSearchlg" class="searchBar" type="text" style="width: 150px;" />
                         </div>
-                        <div class="hidden-lg hidden-md" style="z-index: 1030;">
+                        <div class="searchAreasm hidden-lg hidden-md">
                             <form class="form-inline" role="form">
                                 <div class="icon-addon addon-md">
-                                    <input id="txtSearchsm" class="form-control" type="text" style="width: 150px;" placeholder="Search...">
+                                    <input id="txtSearchsm" class="form-control" type="text" placeholder="Search...">
                                     <label for="txtSearchsm" class="glyphicon glyphicon-search"></label>
                                 </div>
                             </form>                      
