--- a/Praesidium/Praesidium/Views/Home/DropDownPages.cshtml
+++ b/Praesidium/Praesidium/Views/Home/DropDownPages.cshtml
@@ -5,23 +5,23 @@
 
 <h2>Trafficking</h2>
 <ul>
-    <li>@Html.ActionLink("Trafficking", "Resource", "Resources")</li>
-    <li>@Html.ActionLink("Trafficking", "Statistics", "Statistics")</li>
-    <li>@Html.ActionLink("Trafficking", "Adults", "Adults")</li>
-    <li>@Html.ActionLink("Trafficking", "Teachers", "Teachers")</li>
-    <li>@Html.ActionLink("Trafficking", "Teen", "Teen")</li>
-    <li>@Html.ActionLink("Trafficking", "Youth", "Youth")</li>
+    <li>@Html.ActionLink("Resources", "Resource", "trafficking")</li>
+    <li>@Html.ActionLink("Statistics", "Statistics", "trafficking")</li>
+    <li>@Html.ActionLink("Adults", "Adults", "trafficking")</li>
+    <li>@Html.ActionLink("Teachers", "Teachers", "trafficking")</li>
+    <li>@Html.ActionLink("Teen", "Teen", "trafficking")</li>
+    <li>@Html.ActionLink("Youth", "Youth", "trafficking")</li>
 </ul>
 
 <h2>
-    Cyber Security
+    CyberSecurity
 </h2>
 <ul>
-    <li>@Html.ActionLink("CyberSecurity", "Resource", "Resources")</li>
-    <li>@Html.ActionLink("CyberSecurity", "Statistics", "Statistics")</li>
-    <li>@Html.ActionLink("CyberSecurity", "Adults", "Adults")</li>
-    <li>@Html.ActionLink("CyberSecurity", "Teachers", "Teachers")</li>
-    <li>@Html.ActionLink("CyberSecurity", "Teen", "Teen")</li>
-    <li>@Html.ActionLink("CyberSecurity", "Youth", "Youth")</li>
+    <li>@Html.ActionLink("Resources", "Resource", "CyberSecurity")</li>
+    <li>@Html.ActionLink("Resources", "Statistics", "CyberSecurity")</li>
+    <li>@Html.ActionLink("Resources", "Adults", "CyberSecurity")</li>
+    <li>@Html.ActionLink("Resources", "Teachers", "CyberSecurity")</li>
+    <li>@Html.ActionLink("Resources", "Teen", "CyberSecurity")</li>
+    <li>@Html.ActionLink("Resources", "Youth", "CyberSecurity")</li>
 </ul>
 
