--- a/Praesidium/Praesidium/Views/Home/DropDownPages.cshtml
+++ b/Praesidium/Praesidium/Views/Home/DropDownPages.cshtml
@@ -18,10 +18,10 @@
 </h2>
 <ul>
     <li>@Html.ActionLink("Resources", "Resource", "CyberSecurity")</li>
-    <li>@Html.ActionLink("Resources", "Statistics", "CyberSecurity")</li>
-    <li>@Html.ActionLink("Resources", "Adults", "CyberSecurity")</li>
-    <li>@Html.ActionLink("Resources", "Teachers", "CyberSecurity")</li>
-    <li>@Html.ActionLink("Resources", "Teen", "CyberSecurity")</li>
-    <li>@Html.ActionLink("Resources", "Youth", "CyberSecurity")</li>
+    <li>@Html.ActionLink("Statistics", "Statistics", "CyberSecurity")</li>
+    <li>@Html.ActionLink("Adults", "Adults", "CyberSecurity")</li>
+    <li>@Html.ActionLink("Teachers", "Teachers", "CyberSecurity")</li>
+    <li>@Html.ActionLink("Teen", "Teen", "CyberSecurity")</li>
+    <li>@Html.ActionLink("Youth", "Youth", "CyberSecurity")</li>
 </ul>
 
