I like to eat pizza and watch movies

--- a/Praesidium/Praesidium/Views/Home/DropDownPages.cshtml
+++ b/Praesidium/Praesidium/Views/Home/DropDownPages.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Trafficking</h2>
 <ul>
-    <li>@Html.ActionLink("Resources", "Resource", "trafficking")</li>
+    <li>@Html.ActionLink("Resources", "Resources", "trafficking")</li>
     <li>@Html.ActionLink("Statistics", "Statistics", "trafficking")</li>
     <li>@Html.ActionLink("Adults", "Adults", "trafficking")</li>
     <li>@Html.ActionLink("Teachers", "Teachers", "trafficking")</li>
@@ -17,7 +17,7 @@
     CyberSecurity
 </h2>
 <ul>
-    <li>@Html.ActionLink("Resources", "Resource", "CyberSecurity")</li>
+    <li>@Html.ActionLink("Resources", "Resources", "CyberSecurity")</li>
     <li>@Html.ActionLink("Statistics", "Statistics", "CyberSecurity")</li>
     <li>@Html.ActionLink("Adults", "Adults", "CyberSecurity")</li>
     <li>@Html.ActionLink("Teachers", "Teachers", "CyberSecurity")</li>
