--- a/Praesidium/Praesidium/Views/Home/DropDownPages.cshtml
+++ b/Praesidium/Praesidium/Views/Home/DropDownPages.cshtml
@@ -23,5 +23,6 @@
     <li>@Html.ActionLink("Teachers", "Teachers", "CyberSecurity")</li>
     <li>@Html.ActionLink("Teen", "Teen", "CyberSecurity")</li>
     <li>@Html.ActionLink("Youth", "Youth", "CyberSecurity")</li>
+    <li>@Html.ActionLink("Law Enforcement", "LawEnforcement", "CyberSecurity")</li>
 </ul>
 
