Testing changes to Adults Page

--- a/Praesidium/Praesidium/Views/trafficking/Adults.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Adults.cshtml
@@ -3,5 +3,7 @@
     ViewBag.Title = "Adults";
 }
 
-<h2>Adults</h2>
+<div class="row">
+    <div class="col-md-8">
 
+        <p class= "h2" style="text-align:center; color:black"><strong>Keeping your kid safe online</strong> <br /> <strong> Why it's important</strong></p>
