Some photos for trafficking

--- a/Praesidium/Praesidium/Views/trafficking/Index.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Index.cshtml
@@ -2,6 +2,64 @@
 @{
     ViewBag.Title = "Index";
 }
+
+<style>
+    body {
+  padding-top: 50px;
+}
+ 
+.thumbnail {
+    position:relative;
+    overflow:hidden;
+}
+ 
+.caption {
+    position:absolute;
+    top:0;
+    right:0;
+    background:rgba(66, 139, 202, 0.75);
+    width:100%;
+    height:100%;
+    padding:2%;
+    display: none;
+    text-align:center;
+    color:#fff !important;
+    z-index:2;
+}
+</style>
+
+<!-- Addditons -->
+
+<div class="container">
+
+<div class="row">
+    <div class="col-md-3">
+        <div class="thumbnail"> 
+            <img src="hands-caged.jpg">
+        </div>
+    </div>
+
+    <div class="col-md-3">
+        <div class="thumbnail">
+            <img src="hands-tied.jpg">
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="thumbnail">
+            <img src="money.jpg" alt="...">
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="thumbnail">
+   
+            <img src="hands-open.jpg">
+        </div>
+    </div>
+
+</div>
+    </div>
+
+<!--orginal-->
 <div class="row">
     <div class="col-md-8">
         <h2> What Is Trafficking?</h2>
@@ -43,4 +101,9 @@
     </div>
 
 </div>
-    
+
+<!-- New additions script *Caleb*-->
+
+
+
+
